schema/testdata/validation_unique_restrictions/schema.keel
model Post {
    fields {
        title Text
        author Author
    }
}

model Author {
    fields {
        name Text
        anotherField Text
        // timestamp cant be unique
        joinedDate Timestamp @unique
        // has many cant be unique
        posts Post[] @unique
    }

    // this is invalid because posts is a has-many
    @unique([name, posts])

    // invalid because of duplicate field names
    @unique([name, name])

    // stress test
    @unique([name, anotherField, name]) 
}
